fixed folder path issues

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="home-img">
                         <div class="img-box">
-                            <img src="/img/home.gl.jpg" alt="profile picture">
+                            <img src="./img/home.gl.jpg" alt="profile picture">
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                 <div class="row">
                     <div class="about-img">
                         <div class="img-box">
-                            <img src="/img/about.gl.jpg" alt="about me">
+                            <img src="./img/about.gl.jpg" alt="about me">
                         </div>
                     </div>
                     <div class="about-text">
@@ -160,7 +160,7 @@
 
                         <!-- Experience End -->
 
-                        <a href="/img/HANNAH D ANNOR-BLAY_RESUME.pdf" target="_blank" class="btn">download resume</a>
+                        <a href="./img/HANNAH D ANNOR-BLAY_RESUME.pdf" target="_blank" class="btn">download resume</a>
                         <a href="#contact" class="btn link-item">contact me</a>
                     </div>
                 </div>
@@ -180,7 +180,7 @@
                     <!-- Portfolio Item Start -->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="/img/web with logo.png" alt="portfolio item thumb">
+                            <img src="./img/web with logo.png" alt="portfolio item thumb">
                         </div>
                         <h3 class="portfolio-item-title">portfolio website</h3>
                         <button type="button" class="btn view-project-btn">view project</button>
@@ -202,7 +202,7 @@
                     <!-- Portfolio Item Start -->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="/img/Calculator.png" alt="portfolio item thumb">
+                            <img src="./img/Calculator.png" alt="portfolio item thumb">
                         </div>
                         <h3 class="portfolio-item-title">calculator app</h3>
                         <button type="button" class="btn view-project-btn">view project</button>
@@ -224,7 +224,7 @@
                     <!-- Portfolio Item Start -->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="/img/counter app.png" alt="portfolio item thumb">
+                            <img src="./img/counter app.png" alt="portfolio item thumb">
                         </div>
                         <h3 class="portfolio-item-title">counter app</h3>
                         <button type="button" class="btn view-project-btn">view project</button>
@@ -316,7 +316,7 @@
                 <div class="pp-header">
                     <button type="button" class="btn pp-close"><i class="fas fa-times"></i></button>
                     <div class="pp-thumbnail">
-                        <img src="img/PW.png" alt="pp-thumbnail">
+                        <img src="./img/web with logo.png" alt="pp-thumbnail">
                     </div>
                     <h3></h3>
                 </div>
@@ -330,6 +330,6 @@
 
 
 
-        <script src="/script.js"></script>
+        <script src="./script.js"></script>
   </body>
 </html>
